--- a/lang/wd_en.toml
+++ b/lang/wd_en.toml
@@ -1,2 +1,4 @@
+module_wd = "Watchdog"
+
 mt_wd_wd = "Watchdog"
 md_wd_wd = "Monitor your processes and kill them when they use too much CPU over a duration."
